tests/cases/fail/if-4/source.lua
if x then
elseif y then